--- a/index.html
+++ b/index.html
@@ -1,81 +1,47 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Vikash Dubey</title>
-        <meta charset="utf-8" >
-    </head>
-    <body>
-        <a href="https://www.youtube.com" target="_blank">Youtube</a>
-        <a href="https://www.facebook.com/" target="_blank">Facebook </a>
-        <h1>Hello World</h1>
-        <h2>Hello World</h2>
-        <h3>Hello World</h3>
-        <h4>Hello World </h4>
-        <h5>Hello World</h5>
-        <h6>Hello World</h6>
-        <p>Hi i am new to this world help me out</p>
-       
-        <img src="./1.jpg" height="300px" width="300px" alt="girl image">
-        <iframe width="459" height="258" src="https://www.youtube.com/embed/Xp0Sh8hyH-8" title="Chhota Bheem - Mummy Mystery in Dholakpur | Cartoons for Kids | Fun Kids Videos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-         <table>
-            <tr>
-                <th>Name</th>
-                <th>Roll</th>
-                <th>Class</th>
-            </tr>
-            <tr>
-                <td>
-                    Vikash
-                </td>
-                <td>
-                   67
-                </td><td>
-                    6th
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Rahul
-                </td>
-                <td>
-                   67
-                </td><td>
-                    6th
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Sumit
-                </td>
-                <td>
-                   67
-                </td><td>
-                    6th
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Vikash
-                </td>
-                <td>
-                   67
-                </td><td>
-                    6th
-                </td>
-            </tr>
-         </table>
+<html lang="en">
 
-         <ol>
-            <li>Pune</li>
-            <li>Gurgaon</li>
-            <li>Delhi</li>
-            <li>Haryan</li>
-         <ol>
-        <ul>
-            <li>Pune</li>
-            <li>Gurgaon</li>
-            <li>Delhi</li>
-            <li>Haryan</li>
-        <ul>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="./styles/index.css" rel="stylesheet">
+    <style>
+        header {}
+    </style>
+</head>
+
+<body>
+    <header style=" color: white; height: 40px;">
+        <div id="logo">
+        <a href="./index.html" target="_blank"><img src="./assests/logo.jpg" height="30px" width="30px"></a>
+         </div>
+         <div id="two">
+        <a href="./html/ourservices.html" target="_blank">Our Services</a>
+        <a href="./html/aboutus.html" target="_blank">About Us</a>
+        <a href="./html/contact.html" target="_blank">Contact Us</a>
+        <a href="#">Login</a>
+        <a href="#">Sign Up</a>
+        </div>
+    </header>
+    <div class="one">
+        <h4>Why We are Different</h4>
+        <ol>
+            <p>24*7 Support</p>
+            <p>Expetts</p>
+        </ol>
+    </div>
+    </header>
+    <div id="two">
+        <h4>Why We are Different</h4>
+        <ol>
+            <p>24*7 Support</p>
+            <p>Expetts</p>
+        </ol>
+    </div>
+    <footer>
+
+    </footer>
+</body>
+
 </html>
